# aoc-2024

./: .gitignore  README.md  pyproject.toml
01/: main.py
02/: main.py
03/: input.txt  main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py  puzzle.md
09/: main.py  puzzle.md  res.txt
10/: main.py  puzzle.md
11/: main-integers.py  main.py  puzzle.md
12/: main.py
13/: main.py
14/: main.py
15/: main.py
16/: main.py
_template/: main.py
